--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,15 @@
     min-height: 100%;
   }
 
+  .jumbotron{
+/*    padding: 15% 0;*/
+    margin: 20% 0;
+    height: 100%;
+  }
+
+
   footer{
+/*    margin-top: -15%;*/
     color: rgb(0,172,200);
     font-size: 20px;
     background-color: rgb(253,130,4);
@@ -12,7 +20,7 @@
     bottom: 0;
     min-width: 100%;
     /* Set the fixed height of the footer here */
-    height: 10%;
+    min-height: 10%;
 
   }
 
