Reportes con Google Chart
Se terminó de desarrollar esta prueba de desarrollo con Google Chart,
MySQL y jQuery.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
     min-height: 100%;
   }
 
+  body{
+    font-family: 'Titillium Web', sans-serif;
+  }
+
   .jumbotron{
 /*    padding: 15% 0;*/
     margin: 10% 0;
